--- a/Web/index_testing_webX.html
+++ b/Web/index_testing_webX.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>คำนวณอายุ — 2025 UI</title>
+  <title>Test - WebX</title>
   <meta name="color-scheme" content="light" />
   <link rel="preconnect" href="https://fonts.googleapis.com"/>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
