--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
       count_from: "นับจากวันเกิดถึงเวลาที่เลือก",
       next_bday_title: "วันเกิดถัดไป",
       detail_title: "รายละเอียด",
-      footer_line: "2025",
+      footer_line: "RoxyX (roxyx_d) <==> [Witcytech - TH]",
       calc_at: "คำนวณเมื่อ",
       updated_live: "อัปเดตตามเวลาปัจจุบันของเครื่องคุณ",
       fixed_time: "เวลาคงที่ตามที่กำหนด",
@@ -410,7 +410,7 @@
       count_from: "From birth to selected time",
       next_bday_title: "Next birthday",
       detail_title: "Details",
-      footer_line: "2025",
+      footer_line: "RoxyX (roxyx_d) <==> [Witcytech - TH]",
       calc_at: "Calculated at",
       updated_live: "Live with your device time",
       fixed_time: "Fixed time as selected",
@@ -447,7 +447,7 @@
       count_from: "从出生到所选时间",
       next_bday_title: "下一个生日",
       detail_title: "详情",
-      footer_line: "2025",
+      footer_line: "RoxyX (roxyx_d) <==> [Witcytech - TH]",
       calc_at: "计算于",
       updated_live: "随设备时间实时更新",
       fixed_time: "按所选时间固定",
@@ -484,7 +484,7 @@
       count_from: "從生日到所選時間",
       next_bday_title: "下個生日",
       detail_title: "詳細資料",
-      footer_line: "2025",
+      footer_line: "RoxyX (roxyx_d) <==> [Witcytech - TH]",
       calc_at: "計算於",
       updated_live: "依裝置時間即時更新",
       fixed_time: "固定為所選時間",
@@ -521,7 +521,7 @@
       count_from: "Từ ngày sinh đến thời điểm chọn",
       next_bday_title: "Sinh nhật kế tiếp",
       detail_title: "Chi tiết",
-      footer_line: "2025",
+      footer_line: "RoxyX (roxyx_d) <==> [Witcytech - TH]",
       calc_at: "Tính lúc",
       updated_live: "Cập nhật theo giờ thiết bị",
       fixed_time: "Thời điểm cố định",
@@ -558,7 +558,7 @@
       count_from: "ນັບຈາກວັນເກີດ",
       next_bday_title: "ວັນເກີດຕໍ່ໄປ",
       detail_title: "ລາຍລະອຽດ",
-      footer_line: "2025",
+      footer_line: "RoxyX (roxyx_d) <==> [Witcytech - TH]",
       calc_at: "ຄຳນວນເມື່ອ",
       updated_live: "ອັບເດດຕາມເວລາອຸປະກອນ",
       fixed_time: "ເວລາຄົງທີ່",
@@ -595,7 +595,7 @@
       count_from: "မွေးနေ့မှ ရွေးထားသော အချိန်",
       next_bday_title: "နောက်ထပ် မွေးနေ့",
       detail_title: "အသေးစိတ်",
-      footer_line: "2025",
+      footer_line: "RoxyX (roxyx_d) <==> [Witcytech - TH]",
       calc_at: "တွက်ချက်ချိန်",
       updated_live: "စက်အချိန်နှင့်ကိုက်ညီအောင် အပြီးတိုင်",
       fixed_time: "ရွေးထားသော အချိန်",
